:bug: Fix a weird issue with the colour inputs being too narrow
This always *used* to work, not sure what changed but this makes them look the same as the rest of the inputs.

--- a/octoprint_ws281x_led_status/static/css/ws281x_led_status.css
+++ b/octoprint_ws281x_led_status/static/css/ws281x_led_status.css
@@ -25,3 +25,7 @@
     height: 500px;
     overflow-y: auto;
 }
+
+#settings_plugin_ws281x_led_status input[type="color"] {
+    min-height: 30px;
+}
